<resources>
    <string name="app_name">OmniControl</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="weather_config_title">Weather service</string>
    <string name="weather_config_summary">System service settings</string>
    <string name="omni_remote_title">OmniRemote</string>
    <string name="omni_remote_summary">VNC server to allow remote connection to device</string>
    <string name="matlog_title">MatLog</string>
    <string name="matlog_summary">Show logcat</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">Browser changes added to builds</string>
    <string name="omniswitch_title">OmniSwitch</string>
    <string name="omniswitch_summary">Universal recent application switcher</string>
    <string name="omnistore_title">OmniStore</string>
    <string name="omnistore_summary">Download applications</string>
    <string name="wallpaper_title">Wallpapers</string>
    <string name="wallpaper_summary">Browse OmniROM themed wallpapers</string>
    <string name="applist_title">Applications</string>
    <string name="settings_title">Settings</string>

    <string name="bars_settings_title">Bars</string>
    <string name="bars_settings_summary">Status bar options</string>
    <string name="more_settings_title">More</string>
    <string name="more_settings_summary"></string>
    <string name="applist_settings_title">Applications</string>
    <string name="applist_settings_summary">OmniROM applications</string>

    <string name="navigationbar_title">Navigation bar</string>
    <string name="navigation_bar_show_title">Show navigation bar</string>
    <string name="navigation_bar_show_summary">Force enable navigation bar</string>

    <string name="statusbar_settings_category">Status bar</string>
    <string name="status_bar_clock_seconds_title">Show clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Show seconds on status bar clock</string>

    <string name="button_settings_title">Buttons</string>
    <string name="button_settings_summary"></string>
    <string name="global_actions_power_title">Power</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary_new">Show more options in restart menu if not locked</string>

    <string name="device_settings_title">Device settings</string>
    <string name="device_settings_summary">Advanced device specific settings</string>

    <string name="lockscreen_item_title">Lock screen items</string>
    <string name="lockscreen_item_summary">Configure visibility of lock screen items</string>
    <string name="lockscreen_weather_title">Show weather condition</string>
    <string name="lockscreen_weather_summary">Show current weather condition and temperature</string>
    <string name="lockscreen_weather_enabled_info">Requires enablement of weather service</string>

    <string name="system_update_title">System updates</string>
    <string name="system_update_summary">Download and install OmniROM updates</string>


</resources>