<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory android:key="apps_list">
        <Preference
            android:summary="@string/omni_remote_summary"
            android:title="@string/omni_remote_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.omnirom.omniremote.MainActivity"
                android:targetPackage="org.omnirom.omniremote" />
        </Preference>

        <Preference
            android:summary="@string/weather_config_summary"
            android:title="@string/weather_config_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.omnirom.omnijaws.SettingsActivity"
                android:targetPackage="org.omnirom.omnijaws" />
        </Preference>

        <Preference
            android:summary="@string/matlog_summary"
            android:title="@string/matlog_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.pluscubed.logcat.ui.LogcatActivity"
                android:targetPackage="org.omnirom.logcat" />
        </Preference>

        <Preference
            android:summary="@string/changelog_summary"
            android:title="@string/changelog_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.omnirom.omnichange.OmniMain"
                android:targetPackage="org.omnirom.omnichange" />
        </Preference>

        <Preference
            android:summary="@string/omniswitch_summary"
            android:title="@string/omniswitch_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.omnirom.omniswitch.SettingsActivity"
                android:targetPackage="org.omnirom.omniswitch" />
        </Preference>

        <Preference
            android:key="omnistore"
            android:summary="@string/omnistore_summary"
            android:title="@string/omnistore_title"></Preference>
    </PreferenceCategory>


</PreferenceScreen>