<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="lockscreen_item"
    android:title="@string/lockscreen_item_title">

    <org.omnirom.omnilib.preference.SystemSettingSwitchPreference
        android:defaultValue="false"
        android:key="lockscreen_weather_enabled"
        android:summary="@string/lockscreen_weather_summary"
        android:title="@string/lockscreen_weather_title" />

    <Preference
        android:icon="@drawable/ic_info_outline"
        android:persistent="false"
        android:summary="@string/lockscreen_weather_enabled_info">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="org.omnirom.omnijaws.SettingsActivityService"
            android:targetPackage="org.omnirom.omnijaws" />
    </Preference>

</PreferenceScreen>

